--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,10 @@ a {
     color: inherit;
 }
 
+p {
+    font-size: 1.1rem;
+}
+
 .navigation {
     display: flex;
     justify-content: space-between;
@@ -64,9 +68,6 @@ a {
     display: flex;
     align-items: center;
 }
-/* .right-icons img {
-    height: 30px;
-} */
 
 .logo img {
     height: 30px;
@@ -88,6 +89,48 @@ input {
 .user-icon{
     height: 50px;
 }
+
+
+/* hero-section */
+.hero-section {
+    position: relative;
+    height: 60vh;
+    background-color: red;
+}
+
+.hero-section img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.hero-content {
+    position: absolute;
+    top: 50%;
+    width: 40%;
+    left: 5%;
+    transform: translateY(-50%); /* to center it vertically */
+}
+
+.hero-content p {
+    padding-bottom: 2rem;
+}
+
+.btn-primary{
+    background-color: black;
+    font-weight: 700;
+    color: white;
+    font-size: 1rem;
+    padding: .8rem 1rem;
+    display: inline-block; /* so it doesn't overlap the paragraph*/
+}
+
+
+
+
+
+
+
 
 /* utilities */
 .u-main-padding {
